add other things

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,10 +1,9 @@
 # BEGIN_KITTY_THEME
-# Gruvbox Dark Hard
+# Tokyo Night
 include current-theme.conf
 # END_KITTY_THEME
 
-
-font_family GeistMono NF
+font_family JetBrainsMono NF
 bold_font auto
 italic_font auto
 bold_italic_font auto
@@ -13,7 +12,7 @@ font_size 16.0
 
 
 window_border_width 2pt
-active_border_color #8ec07c
+# active_border_color #8ec07c
 window_margin_width 3
 window_padding_width 4
 hide_window_decorations yes
@@ -29,7 +28,7 @@ enabled_layouts grid
 
 
 background_opacity 0.95
-background_image /home/reda/Pictures/themes/gruvbox/gruvbox_astro.png
+background_image /home/reda/Pictures/themes/catppuccin/wallpaper-theme-converter.png
 background_image_layout scaled
 background_tint 0.9
 
