--- a/starship-tokyo-night.toml
+++ b/starship-tokyo-night.toml
@@ -9,13 +9,14 @@ $git_branch\
 $git_status\
 [](fg:#394260 bg:#212736)\
 $nodejs\
+$java\
 $rust\
 $golang\
 $php\
 $c\
+$lua\
 [](fg:#212736 bg:#1d2230)\
 $docker_context\
-$conda\
 [ ](fg:#1d2230)\
 \n$character"""
 
@@ -75,6 +76,11 @@ symbol = ""
 style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
+[java]
+symbol = " "
+style = "bg:#212736"
+format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+
 [rust]
 symbol = ""
 style = "bg:#212736"
@@ -95,14 +101,16 @@ symbol = " "
 style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
+[lua]
+symbol = " "
+style = "bg:#212736"
+format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+
 [docker_context]
 symbol = " "
 style = "bg:color_bg3"
 format = '[[ $symbol( $context) ](fg:#83a598 bg:color_bg3)]($style)'
 
-[conda]
-style = "bg:color_bg3"
-format = '[[ $symbol( $environment) ](fg:#83a598 bg:color_bg3)]($style)'
 
 [character]
 disabled = false
