--- a/starship-simple.toml
+++ b/starship-simple.toml
@@ -7,56 +7,57 @@ command_timeout = 1000
 
 [git_branch]
 symbol = ""
-format = '[[ $symbol $branch ](fg:#ebcb8b)]($style)'
+format = '[[ $symbol $branch ](fg:#957FB8)]($style)'
 
 [git_status]
-format = '[[($all_status$ahead_behind )](fg:#ebcb8b)]($style)'
+format = '[[($all_status$ahead_behind )](fg:#957FB8)]($style)'
 
 [nodejs]
 symbol = ""
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [bun]
 symbol = "B"
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [java]
 symbol = " "
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [rust]
 symbol = ""
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [golang]
 symbol = ""
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [php]
 symbol = ""
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [c]
 symbol = " "
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [lua]
 symbol = " "
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [python]
 symbol = " "
-format = '[[ $symbol ($version) ](fg:#d8dee9)]($style)'
+format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [docker_context]
 symbol = " "
-format = '[[ $symbol( $context) ](fg:#c3e88d)]($style)'
+format = '[[ $symbol( $context) ](fg:#98BB6C)]($style)'
 
 [character]
 disabled = false
-success_symbol = '[](bold fg:#a3be8c)'
-error_symbol = '[](bold fg:#bf616a)'
-vimcmd_symbol = '[](bold fg:#a3be8c)'
-vimcmd_replace_one_symbol = '[](bold fg:#b48ead)'
-vimcmd_replace_symbol = '[](bold fg:#b48ead)'
-vimcmd_visual_symbol = '[](bold fg:#ffc777)'
+success_symbol = '[](bold fg:#DDD8BB)'
+error_symbol = '[](bold fg:#e46876)'
+
+[directory]
+format = "[$path ](bold fg:#F1C982)"
+truncation_length = 1
+
