--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -6,14 +6,14 @@ right_format = """$all"""
 command_timeout = 1000
 
 [git_branch]
-symbol = ""
+symbol = " "
 format = '[[ $symbol $branch ](fg:#957FB8)]($style)'
 
 [git_status]
 format = '[[($all_status$ahead_behind )](fg:#957FB8)]($style)'
 
 [nodejs]
-symbol = ""
+symbol = " "
 format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [bun]
@@ -25,15 +25,15 @@ symbol = " "
 format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [rust]
-symbol = ""
+symbol = " "
 format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [golang]
-symbol = ""
+symbol = " "
 format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [php]
-symbol = ""
+symbol = " "
 format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [c]
@@ -54,10 +54,11 @@ format = '[[ $symbol( $context) ](fg:#98BB6C)]($style)'
 
 [character]
 disabled = false
-success_symbol = '[](bold fg:#DDD8BB)'
-error_symbol = '[](bold fg:#e46876)'
+success_symbol = '[ ](bold fg:#DDD8BB)'
+error_symbol = '[ ](bold fg:#e82424)'
 
 [directory]
 format = "[$path ](bold fg:#F1C982)"
 truncation_length = 1
+
 
