--- a/.config/kitty/session.conf
+++ b/.config/kitty/session.conf
@@ -1,7 +1,7 @@
 cd ~/www
-launch --title "neovim"
+launch --title " nvim"
 
-new_tab developement
+new_tab   dev
 layout grid
 launch --var window=first 
 launch --location=vsplit
