--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,41 +1,47 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-# BEGIN_KITTY_THEME
-# Kanagawa
-include current-theme.conf
-# END_KITTY_THEME
+allow_remote_control yes
 
+# <==theme==>
+include current-theme.conf
+
+# <==Font==>
 font_size        15
 font_family      VictorMono NF
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
+# <==Background==>
+dynamic_background_opacity yes
+background_opacity         0.9
+# background_image         /home/reda/Pictures/gruv-astro.png
+# background_image_layout  scaled
+# background_tint          0.9
 
-background_opacity 0.9
-# background_image /home/reda/Pictures/gruv-astro.png
-# background_image_layout scaled
-# background_tint 0.9
-
-
+# <==Layouts==>
 enabled_layouts grid
 
+# <==borders==>
+active_border_color     #c8c093
+inactive_border_color   #c8c093
 
-active_border_color #c8c093
-inactive_border_color #a6a69c
-window_border_width 2
-window_margin_width 2
-window_padding_width 4
+
+# <==windows==>
 hide_window_decorations yes
+window_border_width     1
+window_padding_width    4
 
+# <==Tab==>
+tab_bar_min_tabs          0
+tab_bar_style             powerline
+tab_powerline_style       slanted
+# tab_title_template        " {'󰊠 ' if (index % 2) == 0 else '󰆘 '}{fmt.bold}{sup.index}"
+# active_tab_title_template " 󰮯 {fmt.nobold}{sup.index}"
 
-tab_bar_min_tabs 0
-tab_bar_style powerline
-tab_powerline_style slanted
-
-
-startup_session ./session.conf
-
-
+# <==KeyMaps==>
 map ctrl+shift+k next_window 
 map ctrl+shift+j previous_window
+map ctrl+shift+d load_config ~/.config/kitty/kitty.conf
+
+# startup_session ./session.conf
