add clipboard opt to waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,6 +51,7 @@ exec-once = waybar
 exec-once = swaync
 exec-once = hyprpaper
 exec-once = hypridle
+exec-once = wl-paste -t text --watch clipman store --no-persist
 
 
 #############################
