--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -17,7 +17,7 @@ symbol = " "
 format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [bun]
-symbol = "B"
+symbol = " "
 format = '[[ $symbol ($version) ](fg:#7E9CD8)]($style)'
 
 [java]
