--- a/.config/kitty/session.conf
+++ b/.config/kitty/session.conf
@@ -1,7 +1,7 @@
 cd ~/www
-launch --title " nvim"
+# launch --title " nvim"
 
-new_tab   dev
+launch --title "  dev"
 layout grid
 launch --var window=first 
 launch --location=vsplit
