--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ allow_remote_control yes
 include current-theme.conf
 
 # <==Font==>
-font_size        15
+font_size        14
 font_family      VictorMono NF
 bold_font        auto
 italic_font      auto
@@ -14,8 +14,8 @@ bold_italic_font auto
 
 # <==Background==>
 dynamic_background_opacity yes
-background_opacity         0.8
-# background_image         /home/reda/Pictures/kanagawa-beach.png
+background_opacity         0.9
+# background_image         /home/reda/Pictures/wallpapres/
 # background_image_layout  scaled
 # background_tint          0.9
 
@@ -36,8 +36,8 @@ window_padding_width    4
 tab_bar_min_tabs          0
 tab_bar_style             powerline
 tab_powerline_style       slanted
-tab_title_template        " {'󰊠 ' if (index % 2) == 0 else '󰆘 '}{fmt.bold}{sup.index}"
-active_tab_title_template " 󰮯 {fmt.nobold}{sup.index}"
+# tab_title_template        " {'󰊠 ' if (index % 2) == 0 else '󰆘 '}{fmt.bold}{sup.index}"
+# active_tab_title_template " 󰮯 {fmt.nobold}{sup.index}"
 
 # <==KeyMaps==>
 map ctrl+shift+k next_window 
@@ -45,4 +45,4 @@ map ctrl+shift+j previous_window
 map ctrl+shift+d load_config ~/.config/kitty/kitty.conf
 
 
-# startup_session ./session.conf
+startup_session ./session.conf
